--- a/index.html
+++ b/index.html
@@ -28,24 +28,14 @@
       <div class="overlay"></div>
       <div class="container">
         <p class="social"><a href="#" title="Facebook" class="facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/alialotaibi09" title="@Alialotaibi09" class="twitter"><i class="fa fa-twitter"></i></a><a href="https://www.instagram.com/alialotaib/" title="aalotaib" class="instagram"><i class="fa fa-instagram"></i></a></p>
+        <div class="transparent" style="margin-top: 200px">
+        <h1 class="cursiver ">Coming Soon..</h1>
+          <h1 class="cursiver" >قريباً</h1>
+          <p style="text-align: center" class="social"><a href="#" title="Facebook" class="facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/alialotaibi09" title="@Alialotaibi09" class="twitter"><i class="fa fa-twitter"></i></a><a href="https://www.instagram.com/alialotaib/" title="aalotaib" class="instagram"><i class="fa fa-instagram"></i></a></p>
 
-        <h1 class="cursive">Coming Soon | قريباً </h1>
         </div>
-        <!--<h2 class="sub">You can expect this beautiful website running soon. </h2>!-->
-       <!-- <div class="mailing-list">
-          <h3 class="mailing-list-heading">Contact me</h3>
-          <div class="row">
-             <form class="form-inline">
-               <div class="form-group">
-                 <label for="email" class="sr-only"></label>
-                 <input type="email" placeholder="jane.doe@example.com" id="email" class="form-control transparent">
-                 <input type="text" placeholder="Enter your message" id="message" class="form-control transparent">
-               </div>
-               <button class="btn btn-danger">send </button>
-             </form>
-           </div>
-         </div>!-->
-       </div>
+
+      </div>
        <div class="footer">
          <div class="container">
            <div class="row">
