Fix small issues

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <div class="overlay"></div>
       <div class="container">
         <p class="social"><a href="#" title="Facebook" class="facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/alialotaibi09" title="@Alialotaibi09" class="twitter"><i class="fa fa-twitter"></i></a><a href="https://www.instagram.com/alialotaib/" title="aalotaib" class="instagram"><i class="fa fa-instagram"></i></a></p>
-        <div class="transparent" style="margin-top: 200px">
-        <h1 class="cursiver ">Coming Soon..</h1>
+        <div class="transparent" style="margin-top: 100px">
+        <h1 class="cursive ">Coming Soon..</h1>
           <h1 class="cursiver" >قريباً</h1>
           <p style="text-align: center" class="social"><a href="#" title="Facebook" class="facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/alialotaibi09" title="@Alialotaibi09" class="twitter"><i class="fa fa-twitter"></i></a><a href="https://www.instagram.com/alialotaib/" title="aalotaib" class="instagram"><i class="fa fa-instagram"></i></a></p>
 
