--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          <div class="container">
            <div class="row">
              <div class="col-md-6">
-               <p>&copy;2017 Ali Alotaibi</p>
+               <p>&copy;2017 @ Ali Alotaibi</p>
              </div>
              <div class="col-md-6">
 
@@ -55,6 +55,6 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.cookie.js"></script>
     <script src="js/front.js"></script>
-   
+
   </body>
 </html>
