--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          <div class="container">
            <div class="row">
              <div class="col-md-6">
-               <p>&copy;2017 Ali Alotaibi</p>
+               <p>&copy;2017 Designed by Ahmed </p>
              </div>
              <div class="col-md-6">
 
